EQUALPOWER panner incorrectly computes gain https://bugs.webkit.org/show_bug.cgi?id=75767

Source/WebCore:

Patch by Raymond Toy <rtoy@google.com> on 2012-01-13
Reviewed by Kenneth Russell.

Layout test added.

* platform/audio/EqualPowerPanner.cpp:
(WebCore::EqualPowerPanner::pan):  Correct the formula.

LayoutTests:

Patch by Raymond Toy <rtoy@chromium.org> on 2012-01-13
Reviewed by Kenneth Russell.

* webaudio/panner-equalpower.html: Added.
* webaudio/panner-equalpower-expected.txt: Added.
* webaudio/resources/panner-model-testing.js: Added.
* webaudio/resources/audio-testing.js:
(createImpulseBuffer): New common utility function.

Canonical link: https://commits.webkit.org/93129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104987 268f45cc-cd09-0410-ab3c-d52691b4dbfc